--- a/_posts/2017-01-31-test-post.md
+++ b/_posts/2017-01-31-test-post.md
@@ -1,11 +1,16 @@
 ---
-layout: post
+layout: default
 title:  "Este es el título de un post de prueba"
 date:   2017-02-04 12:00:00 -0300
 categories: prueba
+
 ---
 
 Y este es su contenido.
+
+Esto es un segundo párrafo.
+
+
 
 ```cpp
 #include<iostream>
@@ -16,3 +21,5 @@ int main(){
     return 0;
 }
 ```
+<!---more--->
+Hola hola hola!
