--- a/_posts/2017-01-31-test-post.md
+++ b/_posts/2017-01-31-test-post.md
@@ -1,8 +1,8 @@
 ---
-layout: default
 title:  "Este es el título de un post de prueba"
 date:   2017-02-04 12:00:00 -0300
 categories: prueba
+layout: post
 
 ---
 
